--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
-    "rc-field-form": "^1.8.0",
+    "rc-field-form": "^1.20.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.9.7"
+    "recoil": "^0.3.1",
+    "rxjs": "^7.1.0",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
